# OpenViewer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  OpenViewer.sln  OpenViewer.vcxproj  OpenViewer.vcxproj.filters  README.md  Release Notes.txt  build.bat  build.sh  build_windows.bat  conanfile.txt  imgui.ini  vcpkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  cmake.yml  flawfinder-analysis.yml
app/src/: CMakeLists.txt  openviewer.cpp
cmake/: find_avx.cmake  target_options.cmake  utils.cmake
conan/recipes/opencolorio/: conanfile.py
conan/recipes/openimageio/: conanfile.py
configs/: default.ocio
configs/default/: default.ocio
configs/default/luts/: Utility_Gamma_2.4_Rec.709_Texture.clf  Utility_Linear_P3-D65.clf  Utility_Linear_Rec.2020.clf  Utility_Linear_Rec.709.clf  Utility_sRGB_Texture.clf
dependencies/: CMakeLists.txt
dependencies/EGL/: egl.h  eglext.h  eglplatform.h
dependencies/glfw/lib-vc2019-x86/: freeglut.lib
dependencies/ociov2/: CMakeLists.txt
dependencies/ociov2/include/: CMakeLists.txt  OpenColorABI.h  glsl.cpp  glsl.h  oglapp.cpp  oglapp.h
dependencies/ociov2/lib-windows-x64/: OpenColorIO_2_1.lib
dependencies/wuffs/: CMakeLists.txt
imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  implot.h  implot_demo.cpp  implot_items.cpp
imgui/include/: imgui.h  imgui_internal.h
imgui/src/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
libOpenViewer/: CMakeLists.txt
libOpenViewer/include/OpenViewer/: cache.h  command_line_tools.h  common.hpp  display.h  exceptions.h  image.hpp  input.h  media.h  media_pool.h  ocio.h  openviewer.h  settings.h  timeline.h
libOpenViewer/src/: CMakeLists.txt  cache.cpp  command_line_tools.cpp  display.cpp  image.cpp  image_read.cpp  image_write.cpp  input.cpp  layer_convert.cpp  layer_shuffle.cpp  media.cpp  media_pool.cpp  ocio.cpp  python.cpp  settings.cpp  timeline.cpp
libOpenViewer/tests/: CMakeLists.txt  test_cache.cpp  test_display.cpp  test_general.cpp  test_input.cpp  test_media.cpp  test_mediapool.cpp  test_ocio.cpp  test_settings.cpp  test_timeline.cpp
libOpenViewerApp/: CMakeLists.txt
libOpenViewerApp/include/OpenViewerApp/: app.h  common.hpp  glfw_callbacks.h  media_pool.h  openviewerapp.h  timeline.h
libOpenViewerApp/src/: CMakeLists.txt  app.cpp  glfw_callbacks.cpp  media_pool.cpp  timeline.cpp
libOpenViewerUtils/: CMakeLists.txt
libOpenViewerUtils/include/OpenViewerUtils/: bit_array.h  filesystem.h  gl.h  hash.h  memory.h  openviewerutils.h  profiler.h  random.h  string.h
libOpenViewerUtils/src/: CMakeLists.txt  bit_array.cpp  filesystem.cpp  gl.cpp  hash.cpp  memory.cpp  profiler.cpp  string.cpp
libOpenViewerUtils/tests/: CMakeLists.txt  test_bitarray.cpp  test_filesystem.cpp
ocio_configs/default/luts/: Utility_Curve_Rec.1886.clf  Utility_Curve_sRGB.clf  Utility_Gamma_1.8_Rec.709_Texture.clf  Utility_Gamma_2.2_AP1_Texture.clf  Utility_Gamma_2.2_Rec.709_Texture.clf  Utility_Linear_sRGB.clf
res/ui/: interface.ini
res/windows/: assoc_file_ext.bat
scripts/: make_vscode_include_path_from_conan.py
scripts/linux/: build_linux.sh
scripts/windows/: build.bat  build_n_run.bat  rebuild.bat
shaders/: alpha_blend.vert  common.vert  parade.frag  parade.vert
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  display.cpp  display.h  imginfos.cpp  imginfos.h  implaybar.cpp  implaybar.h  mainapp.cpp  mainapp.h  mediaexplorer.cpp  mediaexplorer.h  menubar.cpp  menubar.h  plot.cpp  plot.h  scopes.cpp  scopes.h  settings.cpp  settings.h  shortcuts.cpp  shortcuts.h  style.h
src/core/: CMakeLists.txt  cache.cpp  cache.h  image.cpp  image.h  loader.cpp  loader.h  media.cpp  media.h  ocio.cpp  ocio.h  parser.cpp  parser.h  timeline.cpp  timeline.h
src/ispc/: CMakeLists.txt
src/utils/: CMakeLists.txt  decl.h  filesystem_utils.h  gl_utils.cpp  gl_utils.h  imgui_utils.h  logger.h  profiler.h  string_utils.cpp  string_utils.h  utils.cpp
src/utils/memory/: alloc.h  track.h  utils.h
test/cc_skull_test_image/: info.txt
test/dpx/: DLAD_16b_1c_big.dpx  DLAD_8b_3c_big.dpx
test/exr/exr_splitlayers/: library_export_layersLow_Res_Main_Albedo_.exr  library_export_layersLow_Res_Main_Backdoor_light_.exr  library_export_layersLow_Res_Main_BeautyEnv_.exr  library_export_layersLow_Res_Main_BeautyFill_.exr  library_export_layersLow_Res_Main_Beauty_.exr  library_export_layersLow_Res_Main_Diffuse_.exr  library_export_layersLow_Res_Main_Firelight_.exr  library_export_layersLow_Res_Main_Foreground_light_.exr  library_export_layersLow_Res_Main_IndDiffuse_.exr  library_export_layersLow_Res_Main_L_window_lights_.exr  library_export_layersLow_Res_Main_Ncam_.exr  library_export_layersLow_Res_Main_R_window_godray_.exr  library_export_layersLow_Res_Main_R_window_light_.exr  library_export_layersLow_Res_Main_Reflection_.exr  library_export_layersLow_Res_Main_Refraction_.exr  library_export_layersLow_Res_Main_Specular_.exr  library_export_layersLow_Res_Mask_Armchair_details_Id_details_.exr  library_export_layersLow_Res_Mask_Assets_1_Id_.exr  library_export_layersLow_Res_Mask_Assets_2_Id_.exr  library_export_layersLow_Res_Mask_Cabin_Id_details_.exr  library_export_layersLow_Res_Mask_Details_bis_Id_details_.exr  library_export_layersLow_Res_Mask_Divers_details_Id_details_.exr  library_export_layersLow_Res_Mask_Divers_details_bis_Id_details_.exr  library_export_layersLow_Res_Mask_Door_Id_.exr  library_export_layersLow_Res_Mask_Fireplace_details_Id_details_.exr  library_export_layersLow_Res_Mask_Walls_Id_details_.exr  library_export_layersLow_Res_Volume_Backdoor_light_.exr  library_export_layersLow_Res_Volume_BeautyEnv_.exr  library_export_layersLow_Res_Volume_BeautyFill_.exr  library_export_layersLow_Res_Volume_Diffuse_.exr  library_export_layersLow_Res_Volume_Firelight_.exr  library_export_layersLow_Res_Volume_L_window_lights_.exr  library_export_layersLow_Res_Volume_R_window_godray_.exr  (+2 more)
